--- a/hugo.yml
+++ b/hugo.yml
@@ -89,7 +89,7 @@ params:
     enable: true  
     Title: 
     Content: > 
-            . <img style="float: left; width: 30%;" src="images/tinywow_remove_bg_1358085.png">👾 This site is mostly meant to group together stuff I write in various places. It’s mainly focused on data science/data engineer/data analyst projects.  
+            ![ben](images/tinywow_remove_bg_1358085.png#floatleft)👾 This site is mostly meant to group together stuff I write in various places. It’s mainly focused on data science/data engineer/data analyst projects.  
             I’m new on the scene of data analytics with a background in computer science, programming, machine learning, and statistics. My work spans the full spectrum from solving isolated data problems to building production applications. 👾  
                          
             
