github-portfolio pages

--- a/hugo.yml
+++ b/hugo.yml
@@ -1,4 +1,4 @@
-baseURL: "//andronicus.cc" #baseURL: "https://andronicus.cc/"
+baseURL: "//github-portfolio.pages.dev" #baseURL: "https://andronicus.cc/"
 LanguageCode: en-us
 title: Beni Young Profile
 pagerSize: 5
