--- a/hugo.yml
+++ b/hugo.yml
@@ -1,4 +1,4 @@
-baseURL: "https://andronicus.cc/" #baseURL: "https://andronicus.cc/"
+baseURL: "https://github-portfolio.pages.dev/" #baseURL: "https://andronicus.cc/"
 LanguageCode: en-us
 title: Beni Young Profile
 pagerSize: 5
