--- a/hugo.yml
+++ b/hugo.yml
@@ -1,4 +1,4 @@
-baseURL: "https://beni-young.github.io/"
+baseURL: "https://andronicus.cc/"
 LanguageCode: en-us
 title: Beni Young Profile
 pagerSize: 5
